@@ -33,6 +33,7 @@ QVector<QString>	forVariable;
 QVector<bool>	isInFor;
 QVector<QString>	caseVariable;
 QString			fullCompileHere="";
+QString			useQT="Qt6Core";
 bool				firstCasecompare=false;
 
 int main(int argc,char **argv)
@@ -45,6 +46,7 @@ int main(int argc,char **argv)
 			{"verbose-compile",optional_argument,NULL,'v'},
 			{"verbose-ccode",optional_argument,NULL,'V'},
 			{"full-compile",required_argument,NULL,'c'},
+			{"use-qt5",no_argument,NULL,'5'},
 			{"syntax-check",optional_argument,NULL,'s'},
 			{0,0,0,0}
 		};
@@ -57,6 +59,7 @@ int main(int argc,char **argv)
 			{prefs.LFSTK_hashFromKey("verbose-compile"),{TYPEBOOL,"verbose-compile","Verbose compile ( optional 1/true or 0/false )","",true,0}},
 			{prefs.LFSTK_hashFromKey("verbose-ccode"),{TYPEBOOL,"verbose-ccode","Add BASH source lines to C Code ( optional 1/true or 0/false )","",false,0}},
 			{prefs.LFSTK_hashFromKey("full-compile"),{TYPESTRING,"full-compile","Compile script then compile code to ARG ( where ARG is fullpath to final application )","",false,0}},
+			{prefs.LFSTK_hashFromKey("use-qt5"),{TYPEBOOL,"use-qt5","Use qt5 for final compile instead of qt6","",false,0}},
 			{prefs.LFSTK_hashFromKey("syntax-check"),{TYPEBOOL,"syntax-check","Just Check syntax ( use shellcheck if installed  else use bash -n )","",false,0}},
 		};
 	prefs.LFSTK_loadVarsFromFile(configfile);
@@ -77,12 +80,12 @@ int main(int argc,char **argv)
 			qDebug()<<"Error "<<exitstatus;
 			exit(exitstatus);
 		}
+
 	if(prefs.LFSTK_getString("full-compile").length()>0)
-		{
-			fullCompileHere=prefs.LFSTK_getString("full-compile").c_str();
-			//errop<<prefs.LFSTK_getString("full-compile").c_str()<<Qt::endl;
-			//exit(100);
-		}
+		fullCompileHere=prefs.LFSTK_getString("full-compile").c_str();
+
+	if(prefs.LFSTK_getBool("use-qt5")==true)
+		useQT="Qt5Core";
 
 	mainCommandsClass=new commandsClass();
 	mainCompilerClass=new compilerClass(argc,argv);
